# thinking-dust-v2

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  CODE_REVIEW.md  CONTEXTUALIZED_EMBEDDINGS_SPEC.md  CONTRADICTION_DETECTION_PLAN.md  DATA_SOURCES.md  DEVELOPMENT.md  EXTERNAL_REVIEW.md  EXTERNAL_REVIEW_v2.md  HACK_FIX_PLAN.md  KIMI_REVIEW.md  LITERATURE_COMPLIANCE.md  PREPROCESSING_PLAN.md  PREPROCESSING_PROMPT.md  PREPROCESSING_PROMPT_V2.md  QUERY_PREPROCESSING_PROMPT.md  README.md  README_DEMO.md  SPARQL_DESIGN.md  TEACHING_FRAMEWORK.md  TESTING_FRAMEWORK.md  THINKING_LOOP_DESIGN.md  TODO.md  WSD_LITERATURE_VERIFICATION.md  WSD_MILESTONE_SPEC.md  pyproject.toml  requirements.txt
data/: behavioral_strategies.json  synthetic_corpus_10k.txt  td_state.pkl
data/td_store/: 000122.sst  000267.sst  000269.sst  000272.sst  000275.sst  000278.sst  (+33 more)
demos/: chat.py  chat_flare.py  chat_generic.py  demo_api_workflow.py  demo_decomposer.py  demo_file_parse.py  demo_form_automation.py  demo_memory_intelligence.py  demo_monitor.py  demo_reasoning.py  demo_teaching.py  demo_thinking.py  td_cli.py
docs/: LLM_INTERFACE_ARCHITECTURE.md
scripts/: generate_corpus_100k.py
td/: __init__.py  bulk_loader.py  decomposer.py  minimal_seed.py  pipeline.py  reasoning_decomposer.py  solve_advice.py  thinking.py  thinking_generic.py  training_data.py  z3_solver.py
tests/: test_5hop_complex.py  test_all_question_types_5hop.py  test_battle_wikipedia.py  test_ca_reservoir.py  test_clause_segmenter.py  test_composition_rules.py  test_comprehensive.py  test_contradiction_detector.py  test_coreference.py  test_edge_cases.py  test_generalization.py  test_hdc.py  test_intelligence.py  test_mhn.py  test_novel_relations.py  test_passive_negation_relcl.py  test_perception.py  test_pipeline.py  test_question_types.py  test_realworld.py  test_realworld_wikipedia.py  test_relation_canonicalizer.py  test_relation_synonyms.py  test_router.py  test_spacy_extraction.py  test_sparql.py  test_sparql_comprehensive.py  test_sparql_integration.py  test_temporal.py  test_temporal_extractor.py  test_temporal_integration.py  test_temporal_kg.py  test_thinking.py  test_word_senses.py  test_wsd_benchmark.py  test_z3_bridge.py
(+48 files in other folders)
