[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thinking-dust"
version = "0.1.0"
description = "Neuro-symbolic reasoning engine — <100K params, CPU-only, no LLM"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Kazi Rabbany"},
]
dependencies = [
    "numpy>=1.26.0,<2.0",
    "torch>=2.2.0",
    "z3-solver>=4.13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "matplotlib>=3.8.0"]

[tool.setuptools.packages.find]
include = ["td*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
